# clock

./: .gitignore  Cargo.toml  README.md  config.toml  env.sh  flake.nix  mosquitto.conf  rust-toolchain.toml
src/: bounding_box.rs  cli.rs  clock.rs  clock_task.rs  color.rs  config.rs  data.rs  error.rs  event.rs  konst.rs  logging.rs  main.rs  mapping.rs  mqtt.rs  network.rs  ntp.rs  output.rs  program.rs  render.rs  systemd.rs  text.rs  util.rs  wifi.rs  writer.rs
src/blocks/: character.rs  clear.rs  line.rs  mod.rs  text.rs  xy.rs
src/color/: konst.rs  mod.rs  provider.rs  rainbow.rs
src/mqtt/: error.rs  keep_alive.rs  mod.rs  stack.rs  util.rs
src/programs/: ascii.rs  duration.rs  led_n.rs  mod.rs  running_light.rs
src/utils/: mod.rs  stackstr.rs
test/: effect.json  fireworks.json  set_brightness_20.json  show_hello.json  turn_off.json  turn_on.json
