[package]
edition = "2021"
name = "clock"
version = "0.1.0"
authors = ["Matthias Beyer <mail@beyermatthias.de>"]
resolver = "2"

[dependencies]
camino = "1.2.1"
clap = { version = "4.5.53", features = ["derive"] }
clap-verbosity-flag = { version = "3.0.4", default-features = false, features = ["tracing"] }
color-eyre = "0.6.5"
ddp-rs = "1.2.1"
human-panic = "2.0.4"
rumqttc = "0.25.1"
serde = "1.0.228"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt", "macros", "fs", "io-util"] }
toml = "0.9.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
