[package]
edition = "2021"
name = "clock"
version = "0.1.0"
authors = ["Matthias Beyer <mail@beyermatthias.de>"]
resolver = "2"

[dependencies]
camino = "1.2.1"
clap = { version = "4.5.53", features = ["derive"] }
clap-verbosity-flag = { version = "3.0.4", default-features = false, features = ["tracing"] }
color-eyre = "0.6.5"
ddp-rs = "1.2.1"
embedded-graphics = "0.8.1"
human-panic = "2.0.4"
humantime-serde = "1.1.1"
rgb = "0.8.52"
rumqttc = "0.25.1"
serde = "1.0.228"
smart-leds-matrix = "0.2.0"
smart-leds-trait = "0.3.2"
thiserror = "2.0.17"
time = { version = "0.3.44", features = ["formatting", "local-offset"] }
tokio = { version = "1.48.0", features = ["rt", "macros", "fs", "io-util", "sync", "signal"] }
toml = "0.9.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
